<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.johnduran.p4calculadoraderesistencia.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/encabezado"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/instrucciones"
            android:textColor="@color/black"
            android:textSize="18sp"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/resistor"
            >
            <Button
                android:layout_width="12dp"
                android:layout_height="58dp"
                android:background="@color/brown"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="50dp"
                android:id="@+id/bBanda1"
                android:onClick="fBanda1"
                />

            <Button
                android:id="@+id/bBanda2"
                android:layout_width="12dp"
                android:layout_height="47dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="17dp"
                android:background="@color/lime"
                android:onClick="fBanda2" />

            <Button
                android:layout_width="12dp"
                android:layout_height="49dp"
                android:background="@color/red"
                android:layout_marginTop="17dp"
                android:layout_marginLeft="16dp"
                android:id="@+id/bBanda3"
                android:onClick="fBanda3"
                />
            <Button
                android:layout_width="12dp"
                android:layout_height="51dp"
                android:background="@color/goldenrod"
                android:layout_marginTop="17dp"
                android:layout_marginLeft="33dp"
                android:id="@+id/bBanda4"
                android:onClick="fBanda4"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tBanda"
                android:textColor="@color/colorPrimary"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/green"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:id="@+id/lBotones1"
            >
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/black"
                android:layout_marginLeft="10dp"
                android:id="@+id/bNegro"
                android:onClick="fNegro"
                />
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/brown"
                android:layout_marginLeft="13dp"
                android:id="@+id/bCafe"
                android:onClick="fCafe"
                />
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/red"
                android:layout_marginLeft="13dp"
                android:id="@+id/bRojo"
                android:onClick="fRojo"
                />
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/orange"
                android:layout_marginLeft="13dp"
                android:id="@+id/bNaranja"
                android:onClick="fNaranja"
                />
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/yellow"
                android:layout_marginLeft="13dp"
                android:id="@+id/bAmarillo"
                android:onClick="fAmarillo"
                />
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/lime"
                android:layout_marginLeft="13dp"
                android:id="@+id/bVerde"
                android:onClick="fVerde"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/green"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:id="@+id/lBotones2"
            >
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/blue"
                android:layout_marginLeft="13dp"
                android:id="@+id/bAzul"
                android:onClick="fAzul"
                />
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/mediumorchid"
                android:layout_marginLeft="10dp"
                android:id="@+id/bPurpura"
                android:onClick="fPurpura"
                />
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/gray"
                android:layout_marginLeft="13dp"
                android:id="@+id/bGris"
                android:onClick="fGris"
                />
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/white"
                android:layout_marginLeft="13dp"
                android:id="@+id/bBlanco"
                android:onClick="fBlanco"
                />
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/silver"
                android:layout_marginLeft="13dp"
                android:id="@+id/bPlateado"
                android:onClick="fPlateado"
                />
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/goldenrod"
                android:layout_marginLeft="13dp"
                android:id="@+id/bDorado"
                android:onClick="fDorado"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/resistencia"
                android:textSize="20dp"
                android:textColor="@color/green"
                />
            <TextView
                android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tResistencia"
                android:inputType="number"
                android:hint="@string/resistenciadefecto"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tolerancia"
                android:textSize="20dp"
                android:textColor="@color/green"
                />
            <TextView
                 android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tTolerancia"
                android:inputType="number"
                android:hint="@string/toleranciadefecto"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
